Изменения в index.html

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
     </aside>
     <main class="content">
         <div class="row">
-            <a href="#"><img class="image" src="assets/img/img1.jpg" alt="photo1"></a>
-            <a href="#"><img class="image" src="assets/img/img2.jpg" alt="photo2"></a>
-            <a href="#"><img class="image" src="assets/img/img3.jpg" alt="photo3"></a>
+            <a href="#"><img class="image" src="assets/img/img1.jpg" alt="Фото1"></a>
+            <a href="#"><img class="image" src="assets/img/img2.jpg" alt="Фото2"></a>
+            <a href="#"><img class="image" src="assets/img/img3.jpg" alt="Фото3"></a>
         </div>
         <div class="row">
-            <a href="#"><img class="image" src="assets/img/img4.jpg" alt="photo4"></a>
-            <a href="#"><img class="image" src="assets/img/img5.jpg" alt="photo5"></a>
-            <a href="#"><img class="image" src="assets/img/img6.jpg" alt="photo6"></a>
+            <a href="#"><img class="image" src="assets/img/img4.jpg" alt="Фото4"></a>
+            <a href="#"><img class="image" src="assets/img/img5.jpg" alt="Фото5"></a>
+            <a href="#"><img class="image" src="assets/img/img6.jpg" alt="Фото6"></a>
         </div>
     </main>
 </div>
